--- a/blank-ANDROID/app/src/main/AndroidManifest.xml
+++ b/blank-ANDROID/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name=".view.activity.AwesomeActivity_"
+            android:name="${launchActivityName}"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
